--- a/config.cmake.h.in
+++ b/config.cmake.h.in
@@ -51,6 +51,7 @@
 #define ENABLE_COMPRESSION // pkg_check_modules(LIBLZ4 REQUIRED liblz4)
 #cmakedefine ENABLE_APPS_PLUGIN
 
+#cmakedefine ENABLE_HANDSHAKE
 
 #define __always_unused @ALWAYS_UNUSED_MACRO@
 #define __maybe_unused @MAYBE_UNUSED_MACRO@
