--- a/system/netdata-openrc.in
+++ b/system/netdata-openrc.in
@@ -48,35 +48,42 @@ start_pre() {
     fi
 }
 
-reload() {
-    ebegin "Reloading Netdata health configuration"
+run_cmd() {
+    cmd="${1}"
+    msg="${2}"
+    failmsg="${3}"
+    signal="${4}"
+
+    ebegin "${msg}"
     if [ "${NETDATA_USE_NETDATACLI}" = 1 ]; then
-        "${command_prefix}/netdatacli" reload-health >/dev/null
-        eend $? "Failed to reload Netdata health configuration"
+        "${command_prefix}/netdatacli" "${cmd}" >/dev/null
+        eend $? "${failmsg}"
+    elif [ "${supervisor}" = "supervise-daemon" ]; then
+        supervise-daemon "${RC_SVCNAME}" --signal "${signal}"
+        eend $? "${failmsg}"
     else
-        start-stop-daemon --signal SIGUSR2 --pidfile "${pidfile}"
-        eend $? "Failed to reload Netdata health configuration"
+        start-stop-daemon --signal "${signal}" --pidfile "${pidfile}"
+        eend $? "${failmsg}"
     fi
+}
+
+reload() {
+    run_cmd reload-health \
+            "Reloading Netdata health configuration" \
+            "Failed to reload Netdata health configuration" \
+            SIGUSR2
 }
 
 rotate() {
-    ebegin "Reopening Netdata log files"
-    if [ "${NETDATA_USE_NETDATACLI}" = 1 ]; then
-        "${command_prefix}/netdatacli" reopen-logs >/dev/null
-        eend $? "Failed to reopen Netdata log files"
-    else
-        start-stop-daemon --signal SIGHUP --pidfile "${pidfile}"
-        eend $? "Failed to reopen Netdata log files"
-    fi
+    run_cmd reopen-logs \
+            "Reopening Netdata log files" \
+            "Failed to reopen Netdata log files" \
+            SIGHUP
 }
 
 save() {
-    ebegin "Saving Netdata database"
-    if [ "${NETDATA_USE_NETDATACLI}" = 1 ]; then
-        "${command_prefix}/netdatacli" save-database >/dev/null
-        eend $? "Failed to save Netdata database"
-    else
-        start-stop-daemon --signal SIGUSR1 --pidfile "${pidfile}"
-        eend $? "Failed to save Netdata database"
-    fi
+    run_cmd save-database \
+            "Saving Netdata database" \
+            "Failed to save Netdata database" \
+            SIGUSR1
 }
