--- a/collectors/python.d.plugin/pandas/pandas.conf
+++ b/collectors/python.d.plugin/pandas/pandas.conf
@@ -78,9 +78,9 @@ example_csv:
         chart_context: "pandas"
         chart_type: "line"
         chart_units: "%"
-        source_format: "csv"
         processing_code: >
           df = pd.read_csv('https://london.my-netdata.io/api/v1/data?chart=system.cpu&format=csv', storage_options={'User-Agent': 'netdata'});
           del df['time'];
           df = df.tail(1);
-          data = df.to_dict(orient='records')[0];
+          df = df * 100;
+          data_tmp = df.to_dict(orient='records')[0];
