--- a/collectors/python.d.plugin/pandas/pandas.conf
+++ b/collectors/python.d.plugin/pandas/pandas.conf
@@ -84,3 +84,19 @@ example_csv:
           df = df.tail(1);
           df = df * 100;
           data_tmp = df.to_dict(orient='records')[0];
+
+example_json:
+    name: "example_json"
+    update_every: 5
+    chart_configs:
+      - chart_name: "london_alarm_values"
+        chart_title: "london_alarm_values"
+        chart_family: "pandas"
+        chart_context: "pandas"
+        chart_type: "line"
+        chart_units: "n"
+        processing_code: >
+          df = pd.json_normalize(df['alarms']);
+          df = df.set_index('name')[['value']];
+          df = df.dropna();
+          data_tmp = df['value'].to_dict();
