--- a/collectors/python.d.plugin/pandas/pandas.conf
+++ b/collectors/python.d.plugin/pandas/pandas.conf
@@ -96,8 +96,7 @@ example_json:
         chart_type: "line"
         chart_units: "n"
         processing_code: >
-          df = pd.read_json('https://london.my-netdata.io/api/v1/alarms?all', storage_options={'User-Agent': 'netdata'})
-          df = pd.json_normalize(df['alarms']);
-          df = df.set_index('name')[['value']];
-          df = df.dropna();
-          data_tmp = df['value'].to_dict();
+          pd.read_csv('https://london.my-netdata.io/api/v1/data?chart=system.cpu&format=csv', storage_options={'User-Agent': 'netdata'});
+          df.drop('time', axis=1);
+          df.tail(1);
+          df * 100;
