--- a/collectors/python.d.plugin/pandas/pandas.conf
+++ b/collectors/python.d.plugin/pandas/pandas.conf
@@ -94,7 +94,7 @@ github_repo_stats:
         chart_type: "line"
         chart_units: "n"
         processing_code: >
-          df = pd.json_normalize(requests.get('https://api.github.com/repos/netdata/netdata').json())[['stargazers_count', 'open_issues_count', 'forks_count', 'subscribers_count']];
+          pd.json_normalize(requests.get('https://api.github.com/repos/netdata/netdata').json())[['stargazers_count', 'open_issues_count', 'forks_count', 'subscribers_count']].add_prefix('netdata_');
       - chart_name: "netdata_cloud"
         chart_title: "netdata_cloud"
         chart_family: "repo_stats"
@@ -102,4 +102,4 @@ github_repo_stats:
         chart_type: "line"
         chart_units: "n"
         processing_code: >
-          df = pd.json_normalize(requests.get('https://api.github.com/repos/netdata/netdata-cloud').json())[['stargazers_count', 'open_issues_count', 'forks_count', 'subscribers_count']];
+          pd.json_normalize(requests.get('https://api.github.com/repos/netdata/netdata-cloud').json())[['stargazers_count', 'open_issues_count', 'forks_count', 'subscribers_count']].add_prefix('netdata_cloud_');
