Fix runit detection.
- `/lib/rc/sv.d` is only used on some runit systems (notably Artix), not
  all, so don’t bail if we can’t find it.
- Check not just for a `runit` command, but also `runsvdir`.

--- a/system/install-service.sh.in
+++ b/system/install-service.sh.in
@@ -449,8 +449,8 @@ initd_cmds() {
 # Currently not supported, this exists to provide useful error messages.
 
 isrunit() {
-  # if there is no /lib/rc/sv.d, then it's not runit
-  [ ! -d /lib/rc/sv.d ] && return 1
+  # if there is no runsvdir command, then it's not runit
+  command -v runsvdir >/dev/null 2>&1 || return 1
 
   # if there is no runit command, then it's not runit
   command -v runit >/dev/null 2>&1 || return 1
