Add support for systemd in WSL.
THis just involves running the normal systemd check if we detected WSL,
and updating the service manager type appropriately.

--- a/system/install-service.sh.in
+++ b/system/install-service.sh.in
@@ -579,12 +579,13 @@ detect_linux_svc_type() {
 
     if [ "${SVC_TYPE}" = "detect" ]; then
       error "Failed to detect what type of service manager is in use."
-    else
-      echo "${SVC_TYPE}"
+    elif [ "${SVC_TYPE}" = "wsl" ] && check_systemd; then
+      # Support for systemd in WSL.
+      SVC_TYPE="systemd"
     fi
-  else
-    echo "${SVC_TYPE}"
   fi
+
+  echo "${SVC_TYPE}"
 }
 
 install_linux_service() {
