--- a/contrib/debian/control
+++ b/contrib/debian/control
@@ -71,3 +71,12 @@ Depends: ${shlibs:Depends},
          netdata (>= ${source:Version})
 Description: The NFACCT metrics collection plugin for the Netdata Agent
  This plugin allows the Netdata Agent to collect metrics from the firewall using NFACCT objects.
+
+Package: netdata-plugin-chartsd
+Architecture: all
+Depends: bash,
+         netdata (>= ${source:Version})
+Suggests: apcupsd, nut, iw, sudo
+Description: The charts.d metrics collection plugin for the Netdata Agent
+ This plugin adds a selection of additional collectors written in shell script to the Netdata Agent. It includes
+ collectors for NUT, APCUPSD, LibreSWAN, OpenSIPS, and Wireless access point statistics.
