wmi_alerts: Add alerts for services

--- a/health/health.d/wmi.conf
+++ b/health/health.d/wmi.conf
@@ -120,8 +120,26 @@ component: Network
        to: sysadmin
 
 
-## TCP
+## Service
 
+ template: wmi_service_status
+       on: wmi.service_status
+    class: Errors
+     type: Windows
+component: Services
+       os: *
+    hosts: *
+ families: *
+   lookup: sum -10m unaligned absolute match-names foreach *error*,*stressed*,*nonrecover*
+    units: failures
+    every: 1m
+     warn: $this >= 1
+    delay: down 1h multiplier 1.5 max 2h
+     info: number of connection failures in the last 10 minutes
+       to: sysadmin
+
+
+## TCP
 
  template: wmi_tcp_connections_failure
        on: wmi.tcp_conns_failures
